k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: microservices
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service-svc
  namespace: microservices
spec:
  selector:
    app: hello-service
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
  namespace: microservices
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
